--- a/Project 1/Base.lproj/Main.storyboard
+++ b/Project 1/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                             <outlet property="delegate" destination="iLX-kS-Y5Y" id="PpZ-LB-gYs"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Music" id="7xZ-U0-fpQ"/>
+                    <tabBarItem key="tabBarItem" title="Music" selectedImage="music" id="7xZ-U0-fpQ"/>
                     <navigationItem key="navigationItem" id="PUI-gT-0J3"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bBe-qz-THM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -90,7 +90,7 @@
                             <outlet property="delegate" destination="dY6-ux-Jnj" id="Cbv-VX-tZY"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Books" id="Txu-N2-GB4"/>
+                    <tabBarItem key="tabBarItem" title="Books" selectedImage="book" id="Txu-N2-GB4"/>
                     <navigationItem key="navigationItem" id="KBW-vo-fSP"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vvI-yX-Qgy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -144,12 +144,12 @@
                             <outlet property="delegate" destination="G7l-rl-mv8" id="8uT-TA-Zb5"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Notes" id="6hr-AT-lOq"/>
+                    <tabBarItem key="tabBarItem" title="Notes" selectedImage="note" id="6hr-AT-lOq"/>
                     <navigationItem key="navigationItem" id="kaE-d3-fjy"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJP-XV-xKg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1279" y="-1015"/>
+            <point key="canvasLocation" x="-1291" y="-1027"/>
         </scene>
         <!--Books-->
         <scene sceneID="g4Z-bz-eYf">
@@ -245,6 +245,25 @@
                                     <segue destination="lGu-19-NDd" kind="show" id="8Hc-du-EFu"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FunZone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ilo-4m-nTO">
+                                <rect key="frame" x="60" y="383" width="272" height="86"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="72"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="book" translatesAutoresizingMaskIntoConstraints="NO" id="oGn-85-KYh">
+                                <rect key="frame" x="-66" y="477" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="note" translatesAutoresizingMaskIntoConstraints="NO" id="Wzn-hr-SJN">
+                                <rect key="frame" x="60" y="477" width="248" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music" translatesAutoresizingMaskIntoConstraints="NO" id="oze-FM-nFR">
+                                <rect key="frame" x="195" y="477" width="248" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ucE-xo-GIc"/>
                         <color key="backgroundColor" red="0.99278610940000001" green="0.99215406179999999" blue="0.81524944310000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -259,7 +278,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="osL-sb-gXq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3973" y="453"/>
+            <point key="canvasLocation" x="-3973.2824427480914" y="452.81690140845075"/>
         </scene>
         <!--View Controller Register-->
         <scene sceneID="hYp-Kb-SB2">
@@ -320,4 +339,9 @@
             <point key="canvasLocation" x="-3100" y="538"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="book" width="46.164962768554688" height="61.053825378417969"/>
+        <image name="music" width="90.178749084472656" height="90.178749084472656"/>
+        <image name="note" width="81.713752746582031" height="81.910629272460938"/>
+    </resources>
 </document>
